--- a/FoodApp/pom.xml
+++ b/FoodApp/pom.xml
@@ -56,7 +56,7 @@
                     <artifactId>mybatis-generator-maven-plugin</artifactId>
                     <version>1.4.0</version>
                     <configuration>
-                        <contexts>PlayersDB</contexts>
+                        <contexts>FoodAppDB</contexts>
                         <verbose>true</verbose>
                     </configuration>
                     <executions>
